<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_about_us">

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.example.alwanyapp.Presentation.auth.Hospitals.ViewHospitals"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_color"
        android:name="com.example.alwanyapp.Presentation.auth.Colors.ViewColors"
        android:label="@string/menu_colors"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/colorsGuide"
        android:name="com.example.alwanyapp.Presentation.auth.ColorsGuide.ColorsGuide"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_colors_guide" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.alwanyapp.Presentation.auth.Informations.InformationFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_information" >
        <action
            android:id="@+id/action_nav_info_to_nav_info_details"
            app:destination="@id/nav_info_details" />
    </fragment>
    <fragment
        android:id="@+id/nav_info_details"
        android:name="com.example.alwanyapp.Presentation.auth.Informations.InfoDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_info_details" />
    <fragment
        android:id="@+id/nav_helper_apps"
        android:name="com.example.alwanyapp.Presentation.auth.Apps.HelperAppsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_helper_apps" >
        <action
            android:id="@+id/action_nav_helper_apps_to_nav_helper_apps_details"
            app:destination="@id/nav_helper_apps_details" />
    </fragment>
    <fragment
        android:id="@+id/nav_helper_apps_details"
        android:name="com.example.alwanyapp.Presentation.auth.Apps.ViewAppDetails"
        android:label="@string/details"
        tools:layout="@layout/fragment_view_app_details" />
    <fragment
        android:id="@+id/nav_predication"
        android:name="com.example.alwanyapp.Presentation.auth.PredictColor.PredictColorFragment"
        android:label="@string/predication"
        tools:layout="@layout/fragment_predict_color" />
    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.alwanyapp.Presentation.auth.Test.TestFragment"
        android:label="@string/test"
        tools:layout="@layout/fragment_test" >
        <action
            android:id="@+id/action_nav_test_to_result"
            app:destination="@id/result" />
    </fragment>
    <fragment android:id="@+id/result"
        android:name="com.example.alwanyapp.Presentation.auth.Test.ResultFragment"
        tools:layout="@layout/fragment_result"
        android:label="نتيجة اختبار عمى الالوان">
        <action
            android:id="@+id/action_result_to_nav_test"
            app:destination="@id/nav_test" />
    </fragment>
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.alwanyapp.Presentation.auth.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />


    <fragment android:id="@+id/login"
        tools:layout="@layout/fragment_login"
        android:label="تسجيل الدخول"

        android:name="com.example.alwanyapp.Presentation.auth.SignIn.LoginFragment">

        <action
            android:id="@+id/action_login_to_userSignUp"
            app:destination="@id/userSignUp" />
        <action
            android:id="@+id/action_login_to_forgitPassword"
            app:destination="@id/forgitPassword" />
    </fragment>
    <fragment android:id="@+id/forgitPassword"
        android:label="استعاده كلمة المرور"
        tools:layout="@layout/fragment_forgit_password"
        android:name="com.example.alwanyapp.Presentation.auth.ForgetPassword">
        <action
            android:id="@+id/action_forgitPassword_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/doctorSignIn"
        android:name="com.example.alwanyapp.Presentation.auth.Registration.DoctorSignUpFragment"
        android:label="إنشاء حساب طبيب"
        tools:layout="@layout/fragment_doctor_sign_up">
        <action
            android:id="@+id/action_doctorSignIn_to_selectType"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_doctorSignIn_to_userSignUp"
            app:destination="@id/userSignUp" />
    </fragment>
    <fragment
        android:id="@+id/userSignUp"
        android:name="com.example.alwanyapp.Presentation.auth.Registration.PatientSignUpFragment"
        android:label="إنشاء حساب مستخدم"
        tools:layout="@layout/fragment_patien_sign_up">
        <action
            android:id="@+id/action_userSignUp_to_selectType"
            app:destination="@id/login" />
        <action
            android:id="@+id/action_userSignUp_to_doctorSignIn"
            app:destination="@id/doctorSignIn" />
    </fragment>
</navigation>