<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/system"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="true"
            android:hint="@string/helper_app_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/movie_background"
            android:gravity="start"
            android:padding="14dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/app_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="true"
            android:hint="@string/app_link"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/movie_background"
            android:gravity="start"
            android:padding="14dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <TextView
            android:id="@+id/info_description"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="true"
            android:hint="وصف التطبيق المساعد"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/movie_background"
            android:gravity="start"
            android:padding="14dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_shape1"
            android:padding="0dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
