<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo_image"
        android:layout_width="262dp"
        android:layout_height="@dimen/_210sdp"
        android:layout_marginHorizontal="8dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_image_title"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/camera"
        android:layout_width="124dp"
        android:layout_height="122dp"
        android:layout_marginHorizontal="8dp"
        android:src="@drawable/baseline_camera"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/camera_text"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/camera"
        app:layout_constraintStart_toStartOf="@+id/camera"
        app:layout_constraintTop_toBottomOf="@+id/camera" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gallery"
        android:layout_width="124dp"
        android:layout_height="122dp"
        android:layout_marginHorizontal="8dp"
        android:src="@drawable/gallery"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

    <TextView
        android:id="@+id/gallery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gallery_text"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/gallery"
        app:layout_constraintStart_toStartOf="@+id/gallery"
        app:layout_constraintTop_toBottomOf="@+id/gallery" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>